--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^8.0.0-beta.7",
+    "@nuxtjs/style-resources": "^1.2.1",
     "autoprefixer": "^10.4.13",
     "nuxt": "3.0.0",
     "postcss": "^8.4.20",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "tailwindcss": "^3.2.4"
   }
 }
