--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.7",
+    "@heroicons/vue": "^2.0.13",
+    "axios": "^1.2.1",
+    "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-google-login": "^2.0.12",
+    "vuex": "^4.0.0"
+  },
   "devDependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.7",
     "@nuxtjs/style-resources": "^1.2.1",
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "nuxt": "3.0.0",
     "postcss": "^8.4.20",
