--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "format": "prettier --write \"src/**/*.js\" \"src/**/*.vue\" "
+    "format": "prettier --write \"**/*.js\" \"**/*.vue\" "
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.7",
