--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
     "@nuxtjs/i18n": "^8.0.0-beta.7",
     "@nuxtjs/style-resources": "^1.2.1",
     "@tailwindcss/forms": "^0.5.3",
