--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "format": "prettier --write \"**/*.js\" \"**/*.vue\" "
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
     "@pinia/nuxt": "^0.4.6",
     "axios": "^1.2.1",
@@ -30,6 +29,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^9.8.0",
     "nuxt": "3.0.0",
+    "nuxt-headlessui": "^1.0.4",
     "nuxt-icon": "^0.1.8",
     "postcss": "^8.4.20",
     "prettier": "^2.3.2",
