--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write \"**/*.js\" \"**/*.vue\" "
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
     "@pinia/nuxt": "^0.4.6",
     "axios": "^1.2.1",
