--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,5 +35,13 @@
             "always"
         ],
         "no-undef": "off",
+        "vue/multi-word-component-names": "off",
+        "vue/component-name-in-template-casing": [
+            "error",
+            "PascalCase",
+            {
+                "ignores": []
+            }
+        ]
     }
 }
