--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           api_key: ${{secrets.HEROKU_API_KEY}}
           email: ${{secrets.HEROKU_EMAIL}}
-          app_name: nuxtjs-boilerplate
+          app_name: nuxt3-boilerplate
           heroku_branch: "master"
           subfolder: "dist-prod"
