--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -12,9 +12,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: npm ci
-      - name: Deploy
+      - name: Build
+        run: npm run build
       - uses: akhileshns/heroku-deploy@v3.12.12
-        env:
+        with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: nuxt3-boilerplate
           heroku_email: ${{secrets.HEROKU_EMAIL}}
