--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Transfer code to Raspberry Pi
         uses: appleboy/scp-action@master
         with:
-          host: ${{secrets.RASP_DB_HOST}}
-          username: ${{secrets.RASP_DB_USER}}
-          password: ${{secrets.RASP_DB_PASSWORD}}
-          port: ${{secrets.RASP_DB_PORT}}
+          host: ${{secrets.RASP_HOST}}
+          username: ${{secrets.RASP_USER}}
+          password: ${{secrets.RASP_PASSWORD}}
+          port: ${{secrets.RASP_PORT}}
           source: .
           target: /home/hugorcd/my-project
