--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -20,4 +20,4 @@ jobs:
           password: ${{secrets.RASP_PASSWORD}}
           port: ${{secrets.RASP_PORT}}
           source: .
-          target: /home/hugorcd/my-project
+          target: /home/${{secrets.RASP_USER}}/nuxt-app
