Refacto package.json for heroku

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "start": "nuxt start",
+    "heroku-postbuild": "nuxt build",
     "format": "prettier --write \"**/*.js\" \"**/*.vue\" "
   },
   "dependencies": {
