--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "name": "nuxtjs-boilerplate",
+  "version": "0.0.1",
+  "description": "",
+  "author": "Hugo Richard",
   "private": true,
+  "license": "MIT License",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
