--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@intlify/nuxt3": "^0.2.4",
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
+    "@nuxtjs/i18n": "^8.0.0-beta.7",
     "@nuxtjs/style-resources": "^1.2.1",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
