Update env variable, start adding supabase

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,8 +1,10 @@
-VUE_APP_I18N_LOCALE=en
-VUE_APP_I18N_FALLBACK_LOCALE=en
-
 # ENV: development, production, staging
-VUE_APP_ENV=production
-VUE_APP_API_URL=your-api-url
+APP_ENV=production
+APP_API_URL=your-api-url
 
 GOOGLE_CLIENT_ID=your-google-client-id
+
+SUPABASE_URL=your-supabase-url
+SUPABASE_KEY=your-supabase-key
+SUPABASE_SERVICE_KEY=your-supabase-service-key
+SUPABASE_STORAGE_KEY=your-supabase-storage-key
