--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
     "@nuxtjs/i18n": "^8.0.0-beta.7",
     "@nuxtjs/style-resources": "^1.2.1",
+    "@nuxtjs/supabase": "^0.3.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
