SWitch to typescript and refacto package.json

--- a/package.json
+++ b/package.json
@@ -12,37 +12,36 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "start": "nuxt start",
-    "heroku-postbuild": "nuxt build",
     "format": "prettier --write \"**/*.js\" \"**/*.vue\" "
   },
-  "dependencies": {
-    "@headlessui/vue": "^1.7.7",
-    "@heroicons/vue": "^2.0.13",
-    "@pinia/nuxt": "^0.4.6",
-    "axios": "^1.2.2",
-    "pinia": "^2.0.28",
-    "vue-router": "^4.0.3",
-    "vue-sweetalert2": "^5.0.5",
-    "vue3-google-login": "^2.0.12",
-    "vuex": "^4.0.0"
-  },
   "devDependencies": {
+    "@pinia/nuxt": "^0.4.6",
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/i18n": "^8.0.0-beta.7",
     "@nuxtjs/style-resources": "^1.2.1",
-    "@nuxtjs/supabase": "^0.3.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "@headlessui/vue": "^1.7.7",
+    "@heroicons/vue": "^2.0.13",
+    "axios": "^1.2.2",
+    "pinia": "^2.0.28",
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-google-login": "^2.0.12",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.31.0",
+    "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^9.8.0",
+    "eslint-plugin-vue": "^9.9.0",
     "nuxt": "3.0.0",
     "nuxt-headlessui": "^1.1.1",
     "nuxt-icon": "^0.1.8",
     "postcss": "^8.4.21",
     "prettier": "^2.8.2",
     "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
