--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,8 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:vue/vue3-essential",
-        "plugin:prettier/recommended"
+        "plugin:vue/essential",
+        "plugin:@typescript-eslint/recommended"
     ],
     "overrides": [
     ],
@@ -15,7 +15,8 @@
         "sourceType": "module"
     },
     "plugins": [
-        "vue"
+        "vue",
+        "@typescript-eslint"
     ],
     "rules": {
         "indent": [
