--- a/package.json
+++ b/package.json
@@ -14,33 +14,35 @@
     "start": "nuxt start",
     "format": "prettier --write \"**/*.js\" \"**/*.vue\" "
   },
-  "devDependencies": {
+  "dependencies": {
     "@pinia/nuxt": "^0.4.6",
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/i18n": "^8.0.0-beta.7",
     "@nuxtjs/style-resources": "^1.2.1",
     "@tailwindcss/forms": "^0.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
     "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
     "axios": "^1.2.2",
     "pinia": "^2.0.29",
     "vue-sweetalert2": "^5.0.5",
     "vue3-google-login": "^2.0.12",
+    "nuxt": "3.0.0",
+    "nuxt-headlessui": "^1.1.1",
+    "nuxt-icon": "^0.2.5",
+    "postcss": "^8.4.21",
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^9.9.0",
-    "nuxt": "3.0.0",
-    "nuxt-headlessui": "^1.1.1",
-    "nuxt-icon": "^0.2.5",
-    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
-    "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite-plugin-eslint": "^1.8.1"
   }
