--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/i18n": "8.0.0-beta.8",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
-    "@nuxtjs/i18n": "8.0.0-beta.8",
+    "@vueuse/core": "^9.11.1",
+    "@vueuse/nuxt": "^9.11.1",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "nuxt": "3.0.0",
