--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@pinia/nuxt": "^0.4.6",
     "@tailwindcss/forms": "^0.5.3",
-    "axios": "^1.2.3",
     "nuxt-headlessui": "^1.1.1",
     "nuxt-icon": "^0.2.6",
     "pinia": "^2.0.29",
     "postcss": "^8.4.21",
-    "sass": "^1.57.1",
-    "vue3-google-login": "^2.0.12"
+    "sass": "^1.57.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
