Remove google-auth.ts, init supabase, and refacto .env.exemple

--- a/.env.exemple
+++ b/.env.exemple
@@ -2,9 +2,8 @@
 APP_ENV=production
 APP_API_URL=your-api-url
 
-NUXT_GOOGLE_CLIENT_ID=your-google-client-id
-
 SUPABASE_URL=your-supabase-url
 SUPABASE_KEY=your-supabase-key
-SUPABASE_SERVICE_KEY=your-supabase-service-key
-SUPABASE_STORAGE_KEY=your-supabase-storage-key
+
+# if you want to override the default port
+PORT=8080
