--- a/.env.exemple
+++ b/.env.exemple
@@ -4,6 +4,7 @@ APP_API_URL=your-api-url
 
 SUPABASE_URL=your-supabase-url
 SUPABASE_KEY=your-supabase-key
+SUPABASE_SERVICE_KEY=your-supabase-service-key
 
 # if you want to override the default port
 PORT=8080
