Add prisma client

--- a/.env.exemple
+++ b/.env.exemple
@@ -6,5 +6,8 @@ SUPABASE_URL=your-supabase-url
 SUPABASE_KEY=your-supabase-key
 SUPABASE_SERVICE_KEY=your-supabase-service-key
 
+# for prisma client
+DATABASE_URL=your-database-url
+
 # if you want to override the default port
 PORT=8080
