--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "start": "nuxt start",
-    "format": "prettier --write \"**/*.js\" \"**/*.vue\" "
+    "format": "prettier --write \"**/*.js\" \"**/*.vue\" ",
+    "prisma:generate": "prisma generate",
+    "prisma:pull": "prisma db pull",
+    "prisma:push": "prisma db push"
   },
   "devDependencies": {
     "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
     "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
-    "@nuxtjs/style-resources": "^1.2.1",
-    "@nuxtjs/tailwindcss": "^6.2.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "nuxt-headlessui": "^1.1.1",
-    "nuxt-icon": "^0.2.6",
-    "postcss": "^8.4.21",
-    "sass": "^1.57.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/i18n": "8.0.0-beta.8",
+    "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/supabase": "^0.3.0",
+    "@nuxtjs/tailwindcss": "^6.2.0",
+    "@prisma/client": "^4.9.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "@vueuse/core": "^9.11.1",
@@ -35,7 +35,12 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "nuxt": "3.0.0",
+    "nuxt-headlessui": "^1.1.1",
+    "nuxt-icon": "^0.2.6",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "prisma": "^4.9.0",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4"
   }
 }
