--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prettier": "^2.8.3",
     "prisma": "^4.9.0",
     "sass": "^1.57.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "stripe": "^11.7.0"
   }
 }
