reset password logic

--- a/.env.exemple
+++ b/.env.exemple
@@ -9,5 +9,8 @@ SUPABASE_SERVICE_KEY=your-supabase-service-key
 # for prisma client
 DATABASE_URL=your-database-url
 
+# for stripe
+STRIPE_SECRET_KEY=your-stripe-secret-key
+
 # if you want to override the default port
 PORT=8080
