--- a/.env.exemple
+++ b/.env.exemple
@@ -2,6 +2,8 @@
 APP_ENV=production
 APP_API_URL=your-api-url
 
+APP_DOMAIN=your-domain
+
 SUPABASE_URL=your-supabase-url
 SUPABASE_KEY=your-supabase-key
 SUPABASE_SERVICE_KEY=your-supabase-service-key
